<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:stretchColumns="1"
             android:paddingRight="5dp"
             android:paddingLeft="5dp">

    <TableRow android:id="@+id/pan_row"
              android:paddingTop="10dp"
              android:paddingBottom="10dp">

        <TextView android:text="@string/pan_number"
                  android:textSize="17sp"
                  android:textColor="@android:color/primary_text_dark"
                  android:paddingLeft="5dp"
                  android:paddingRight="10dp"
                  android:layout_height="match_parent"
                  android:layout_width="wrap_content"
                  android:gravity="center_vertical"/>

        <EditText android:id="@+id/pan_number"
                  android:hint="@string/pan_hint"
                  android:textSize="17sp"
                  android:textColor="@android:color/primary_text_light"
                  android:paddingLeft="5dp"
                  android:layout_height="match_parent"
                  android:gravity="center_vertical"/>
    </TableRow>
    <View android:layout_height="1sp" android:background="#FF909090"/>
    <TableRow android:id="@+id/assess_row"
              android:paddingTop="10dp"
              android:paddingBottom="10dp">

        <TextView android:text="@string/assessment_year"
                  android:textSize="17sp"
                  android:textColor="@android:color/primary_text_dark"
                  android:paddingLeft="5dp"
                  android:paddingRight="10dp"
                  android:layout_height="match_parent"
                  android:layout_width="wrap_content"
                  android:gravity="center_vertical"/>

        <EditText android:id="@+id/assessment_year"
                  android:hint="@string/assessment_year_hint"
                  android:textSize="17sp"
                  android:textColor="@android:color/primary_text_dark"
                  android:paddingLeft="5dp"
                  android:layout_height="match_parent"
                  android:gravity="center_vertical"/>
    </TableRow>
    <View android:layout_height="1sp" android:background="#FF909090"/>
    <TableRow android:id="@+id/submit_row"
              android:paddingTop="10dp"
              android:paddingBottom="10dp">
        <Button android:text="@string/submit"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:onClick="getRefund"
                android:id="@+id/save_button"/>
    </TableRow>
</TableLayout>